--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGO_URI=mongodb+srv://rishadhusainrizvi786:WqC5ILRgwFLi5Rvz@cluster0.caujlwq.mongodb.net/menumanagement
-PORT=5000
+PORT=https://menumanagement-1.onrender.com
